--- a/board/canaan/k230_siplp4/Makefile
+++ b/board/canaan/k230_siplp4/Makefile
@@ -23,38 +23,17 @@
 #  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #  */
 
-obj-y += dram.o
-obj-y += cpu.o
-obj-y += cache.o
-obj-y += puf_fw/pufs_common/pufs_internal.o 
-obj-y += puf_fw/pufs_common/pufs_reg_ctrl.o 
-obj-y += puf_fw/pufs_crypto/pufs_crypto.o 
-obj-y += puf_fw/pufs_dma/pufs_dma.o 
-obj-y += puf_fw/pufs_ecc/pufs_ecc.o 
-obj-y += puf_fw/pufs_ecp/pufs_ecp_mprog.o 
-obj-y += puf_fw/pufs_ecp/pufs_ecp.o 
-obj-y += puf_fw/pufs_hmac/pufs_hmac.o 
-obj-y += puf_fw/pufs_ka/pufs_ka.o 
-obj-y += puf_fw/pufs_rt/pufs_rt.o 
-obj-y += puf_fw/pufs_sm2/pufs_sm2.o 
-obj-y += puf_fw/pufs_sp38a/pufs_sp38a.o 
-obj-y += puf_fw/pufs_sp38d/pufs_sp38d.o 
+
+
+obj-$(CONFIG_SIPLP4_3200_WODT) += gen_siplp4_3200_hwodt.o
+obj-$(CONFIG_SIPLP4_3200_WALLODT) += gen_siplp4_3200_allodt.o
+
+#arch/riscv/cpu/k230/ddr4/sip_lpddr4_init_32_swap_3200_with_wodt.c
+$(obj)/gen_siplp4_3200_hwodt.c: $(src)/sip_lpddr4_init_32_swap_3200_with_wodt.c   
+	($(srctree)/arch/riscv/cpu/k230/ddr_2d.sh $< $@ 0x50000 0x53fff 0x54000 0x5433d  0x542bd || exit 1)
+
+$(obj)/gen_siplp4_3200_allodt.c: $(src)/sip_lpddr4_init_32_swap_3200_with_allodt.c
+	($(srctree)/arch/riscv/cpu/k230/ddr_2d.sh $< $@ 0x50000 0x53fff 0x54000 0x5433d  0x542bd || exit 1)
 
 
 
-
-
-
-
-obj-y += sysctl.o
-obj-y += unzip.o
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_common  
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_crypto
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_dma
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_ecc
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_ecp
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_hmac
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_ka
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_rt
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_sm2
