--- a/board/canaan/k230_canmv/Kconfig
+++ b/board/canaan/k230_canmv/Kconfig
@@ -1,4 +1,4 @@
-if TARGET_K230_EVB
+if TARGET_K230_CANMV
 
 config SYS_CPU
 	default "k230"
@@ -7,7 +7,7 @@ config SYS_VENDOR
     default "canaan"
 
 config SYS_BOARD
-    default "k230_evb"
+    default "k230_canmv"
 
 config SYS_CONFIG_NAME
     default "k230_evb"
@@ -16,18 +16,11 @@ config SYS_CONFIG_NAME
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
 	select RISCV_THEAD
-    
 choice
 	prompt "ddr typy freq"
-	depends on TARGET_K230_EVB 
-	default LPDDR3_800
-	
-config LPDDR3_800
-	bool "ddr3 800"
+    default CANMV_LPDDR3_2133
 
-config LPDDR3_2133
-	bool  "ddr3 2133"
-
+    config CANMV_LPDDR3_2133
+        bool  "k230 canmv ddr3 2133"    
 endchoice
-
 endif
