--- a/board/canaan/common/Makefile
+++ b/board/canaan/common/Makefile
@@ -33,6 +33,16 @@ obj-y += k230_board_common.o
 obj-y +=  k230_img.o
 obj-y +=  k230_perf.o
 
+obj-$(CONFIG_SIPLP4_3200_WODT) += gen_siplp4_3200_hwodt.o
+obj-$(CONFIG_SIPLP4_3200_WALLODT) += gen_siplp4_3200_allodt.o
+
+$(obj)/gen_siplp4_3200_hwodt.c: $(src)/sip_lpddr4_init_32_swap_3200_with_wodt.c   
+	($(srctree)/arch/riscv/cpu/k230/ddr_2d.sh $< $@ 0x50000 0x53fff 0x54000 0x5433d  0x542bd || exit 1)
+
+$(obj)/gen_siplp4_3200_allodt.c: $(src)/sip_lpddr4_init_32_swap_3200_with_allodt.c
+	($(srctree)/arch/riscv/cpu/k230/ddr_2d.sh $< $@ 0x50000 0x53fff 0x54000 0x5433d  0x542bd || exit 1)
+
+
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_common  
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_crypto
