--- a/configs/k230_evb_sip_defconfig
+++ b/configs/k230_evb_sip_defconfig
@@ -17,7 +17,6 @@ CONFIG_SPL_SPI=y
 CONFIG_SYS_LOAD_ADDR=0xc000000
 CONFIG_BUILD_TARGET="u-boot.bin"
 CONFIG_TARGET_K230_SIPLP4=y
-CONFIG_SIPLP4_3200_WALLODT=y
 CONFIG_ARCH_RV64I=y
 # CONFIG_SPL_SMP is not set
 CONFIG_SHOW_REGS=y
@@ -72,6 +71,7 @@ CONFIG_ENV_IS_IN_SPI_FLASH=y
 CONFIG_ENV_SECT_SIZE_AUTO=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_PROT_UDP=y
+CONFIG_BOOTP_SERVERIP=y
 CONFIG_SPL_DM_DEVICE_REMOVE=y
 CONFIG_SPL_CLK=y
 CONFIG_DM_KEYBOARD=y
