--- a/configs/k230_evb_doorlock_ov9286_defconfig
+++ b/configs/k230_evb_doorlock_ov9286_defconfig
@@ -72,6 +72,7 @@ CONFIG_ENV_IS_IN_SPI_FLASH=y
 CONFIG_ENV_SECT_SIZE_AUTO=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_PROT_UDP=y
+CONFIG_BOOTP_SERVERIP=y
 CONFIG_SPL_DM_DEVICE_REMOVE=y
 CONFIG_SPL_CLK=y
 CONFIG_DM_KEYBOARD=y
