--- a/board/canaan/k230_canmv_01studio/Makefile
+++ b/board/canaan/k230_canmv_01studio/Makefile
@@ -23,41 +23,29 @@
 #  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #  */
 
-obj-y += dram.o
-obj-y += cpu.o
-obj-y += cache.o
-obj-y += puf_fw/pufs_common/pufs_internal.o 
-obj-y += puf_fw/pufs_common/pufs_reg_ctrl.o 
-obj-y += puf_fw/pufs_crypto/pufs_crypto.o 
-obj-y += puf_fw/pufs_dma/pufs_dma.o 
-obj-y += puf_fw/pufs_ecc/pufs_ecc.o 
-obj-y += puf_fw/pufs_ecp/pufs_ecp_mprog.o 
-obj-y += puf_fw/pufs_ecp/pufs_ecp.o 
-obj-y += puf_fw/pufs_hmac/pufs_hmac.o 
-obj-y += puf_fw/pufs_ka/pufs_ka.o 
-obj-y += puf_fw/pufs_rt/pufs_rt.o 
-obj-y += puf_fw/pufs_rt/pufs_rt_cde.o 
-obj-y += puf_fw/pufs_sm2/pufs_sm2.o 
-obj-y += puf_fw/pufs_sp38a/pufs_sp38a.o 
-obj-y += puf_fw/pufs_sp38d/pufs_sp38d.o 
+obj-y += board.o
 
+obj-$(CONFIG_CANMV_01STUDIO_LPDDR3_2133) += gen_canmv_01studio_lpddr3_2133.o
+obj-$(CONFIG_CANMV_01STUDIO_LPDDR3_1600) += gen_canmv_01studio_lpddr3_1600.o
+obj-$(CONFIG_CANMV_01STUDIO_LPDDR3_800) += gen_canmv_01studio_lpddr3_800.o
 
+$(obj)/gen_canmv_01studio_lpddr3_2133.c: $(src)/canmv_01studio_ddr_init_2133.c   $(srctree)/arch/riscv/cpu/k230/ddr.sh
+	($(srctree)/arch/riscv/cpu/k230/ddr.sh $< $@ 0x50000 0x53fff 0x54000 0x54359  || exit 1)
+$(obj)/gen_canmv_01studio_lpddr3_1600.c: $(src)/canmv_01studio_ddr_init_1600.c   $(srctree)/arch/riscv/cpu/k230/ddr.sh	
+	($(srctree)/arch/riscv/cpu/k230/ddr.sh $< $@ 0x50000 0x53fff 0x54000 0x54359  || exit 1) #cp $< $@
+$(obj)/gen_canmv_01studio_lpddr3_800.c: $(src)/canmv_01studio_ddr_init_800.c   $(srctree)/arch/riscv/cpu/k230/ddr.sh
+	($(srctree)/arch/riscv/cpu/k230/ddr.sh $< $@ 0x50000 0x53fff 0x54000 0x54359  || exit 1)
 
-
-
-
-
-obj-y += sysctl.o
-obj-y += unzip.o
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230
+EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_common  
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_crypto
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_dma
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_ecc
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_ecp
-EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_hmac
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_ka
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_rt
+EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_ecc
+EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_hmac
+EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_ecp
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_sm2
+EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_sp38a
+EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_sp38d
 
-obj-$(CONFIG_$(SPL_)DFU_VIRT) += dfu_otp.o
