--- a/configs/k230_canmv_01studio_defconfig
+++ b/configs/k230_canmv_01studio_defconfig
@@ -1,11 +1,11 @@
 CONFIG_RISCV=y
 CONFIG_SYS_TEXT_BASE=0x8000000
 CONFIG_SYS_MALLOC_F_LEN=0x40000
-CONFIG_NR_DRAM_BANKS=3
+CONFIG_NR_DRAM_BANKS=2
 CONFIG_ENV_SIZE=0x10000
 CONFIG_ENV_OFFSET=0x1e0000
 CONFIG_SPL_DM_SPI=y
-CONFIG_DEFAULT_DEVICE_TREE="k230_canmv"
+CONFIG_DEFAULT_DEVICE_TREE="k230_canmv_01studio"
 CONFIG_SPL_TEXT_BASE=0x80300000
 CONFIG_SYS_PROMPT="K230# "
 CONFIG_SPL_MMC=y
@@ -16,7 +16,7 @@ CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI=y
 CONFIG_SYS_LOAD_ADDR=0xc000000
 CONFIG_BUILD_TARGET="u-boot.bin"
-CONFIG_TARGET_K230_CANMV=y
+CONFIG_TARGET_K230_CANMV_01STUDIO=y
 CONFIG_ARCH_RV64I=y
 # CONFIG_SPL_SMP is not set
 CONFIG_SHOW_REGS=y
