--- a/configs/k230_canmv_v2_defconfig
+++ b/configs/k230_canmv_v2_defconfig
@@ -1,11 +1,11 @@
 CONFIG_RISCV=y
 CONFIG_SYS_TEXT_BASE=0x8000000
 CONFIG_SYS_MALLOC_F_LEN=0x40000
-CONFIG_NR_DRAM_BANKS=3
+CONFIG_NR_DRAM_BANKS=2
 CONFIG_ENV_SIZE=0x10000
 CONFIG_ENV_OFFSET=0x1e0000
 CONFIG_SPL_DM_SPI=y
-CONFIG_DEFAULT_DEVICE_TREE="k230_canmv"
+CONFIG_DEFAULT_DEVICE_TREE="k230_canmv_v2"
 CONFIG_SPL_TEXT_BASE=0x80300000
 CONFIG_SYS_PROMPT="K230# "
 CONFIG_SPL_MMC=y
@@ -73,6 +73,7 @@ CONFIG_ENV_SECT_SIZE_AUTO=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_PROT_UDP=y
 CONFIG_BOOTP_SERVERIP=y
+CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_SPL_DM_DEVICE_REMOVE=y
 CONFIG_SPL_CLK=y
 CONFIG_DM_KEYBOARD=y
