--- a/board/canaan/k230_canmv_dongshanpi/Makefile
+++ b/board/canaan/k230_canmv_dongshanpi/Makefile
@@ -25,24 +25,11 @@
 
 obj-y += board.o
 
-obj-$(CONFIG_CANMV_01STUDIO_LPDDR3_2133) += gen_canmv_01studio_lpddr3_2133.o
-obj-$(CONFIG_CANMV_01STUDIO_LPDDR3_1600) += gen_canmv_01studio_lpddr3_1600.o
-obj-$(CONFIG_CANMV_01STUDIO_LPDDR3_800) += gen_canmv_01studio_lpddr3_800.o
+obj-$(CONFIG_CANMV_LPDDR3_2133) += gen_pilpddr3_2133.o   #ddr_init_2133.c
 
-obj-$(CONFIG_CANMV_01STUDIO_LPDDR4_2667) += gen_canmv_01studio_lpddr4_2667.o
-obj-$(CONFIG_CANMV_01STUDIO_LPDDR4_3200) += gen_canmv_01studio_lpddr4_3200.o
-
-$(obj)/gen_canmv_01studio_lpddr3_2133.c: $(src)/canmv_01studio_ddr_init_2133.c   $(srctree)/arch/riscv/cpu/k230/ddr.sh
-	($(srctree)/arch/riscv/cpu/k230/ddr.sh $< $@ 0x50000 0x53fff 0x54000 0x54359  || exit 1)
-$(obj)/gen_canmv_01studio_lpddr3_1600.c: $(src)/canmv_01studio_ddr_init_1600.c   $(srctree)/arch/riscv/cpu/k230/ddr.sh	
-	($(srctree)/arch/riscv/cpu/k230/ddr.sh $< $@ 0x50000 0x53fff 0x54000 0x54359  || exit 1) #cp $< $@
-$(obj)/gen_canmv_01studio_lpddr3_800.c: $(src)/canmv_01studio_ddr_init_800.c   $(srctree)/arch/riscv/cpu/k230/ddr.sh
+$(obj)/gen_pilpddr3_2133.c: $(src)/k230pi_ddr_init_2133.c   $(srctree)/arch/riscv/cpu/k230/ddr.sh
 	($(srctree)/arch/riscv/cpu/k230/ddr.sh $< $@ 0x50000 0x53fff 0x54000 0x54359  || exit 1)
 
-$(obj)/gen_canmv_01studio_lpddr4_2667.c: $(src)/lpddr4_init_32_swap_2667.c    $(srctree)/arch/riscv/cpu/k230/ddr.sh
-	($(srctree)/arch/riscv/cpu/k230/ddr.sh $< $@ 0x50000 0x53fff 0x54000 0x5433d  || exit 1)
-$(obj)/gen_canmv_01studio_lpddr4_3200.c: $(src)/lpddr4_init_32_swap_3200.c   
-	($(srctree)/arch/riscv/cpu/k230/ddr_2d.sh $< $@ 0x50000 0x53fff 0x54000 0x5433d  0x542bd || exit 1)
 
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_common  
