--- a/board/canaan/k230_canmv/Kconfig
+++ b/board/canaan/k230_canmv/Kconfig
@@ -2,7 +2,7 @@ if TARGET_K230_CANMV
 
 config SYS_CPU
 	default "k230"
-    
+
 config SYS_VENDOR
     default "canaan"
 
@@ -16,11 +16,16 @@ config SYS_CONFIG_NAME
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
 	select RISCV_THEAD
+
 choice
 	prompt "ddr typy freq"
     default CANMV_LPDDR3_2133
 
     config CANMV_LPDDR3_2133
-        bool  "k230 canmv ddr3 2133"    
+        bool  "k230 canmv ddr3 2133"
+
+    config CANMV_V3_LPDDR4_2667
+	    bool "canmv v3 LP4_2667"
 endchoice
+
 endif
