--- a/board/canaan/k230_canmv/Kconfig
+++ b/board/canaan/k230_canmv/Kconfig
@@ -26,6 +26,9 @@ choice
 
     config CANMV_V3_LPDDR4_2667
 	    bool "canmv v3 LP4_2667"
+
+    config CANMV_V3_LPDDR4_3200
+	    bool "canmv v3 LP4_3200"
 endchoice
 
 endif
