--- a/board/canaan/k230_canmv/Makefile
+++ b/board/canaan/k230_canmv/Makefile
@@ -32,8 +32,15 @@ $(obj)/gen_pilpddr3_2133.c: $(src)/k230pi_ddr_init_2133.c   $(srctree)/arch/risc
 
 obj-$(CONFIG_CANMV_V3_LPDDR4_2667) += gen_canmvv3_lpddr4_2667.o
 
-$(obj)/gen_canmvv3_lpddr4_2667.c: $(src)/lpddr4_init_32_swap_2667.c    $(srctree)/arch/riscv/cpu/k230/ddr.sh
+$(obj)/gen_canmvv3_lpddr4_2667.c: $(src)/../k230_canmv_01studio/lpddr4_init_32_swap_2667.c    $(srctree)/arch/riscv/cpu/k230/ddr.sh
 	($(srctree)/arch/riscv/cpu/k230/ddr.sh $< $@ 0x50000 0x53fff 0x54000 0x5433d  || exit 1)
+
+
+obj-$(CONFIG_CANMV_V3_LPDDR4_3200) += gen_canmvv3_lpddr4_3200.o
+
+$(obj)/gen_canmvv3_lpddr4_3200.c: $(src)/../k230_canmv_01studio/lpddr4_init_32_swap_3200.c  $(srctree)/arch/riscv/cpu/k230/ddr_2d.sh
+	($(srctree)/arch/riscv/cpu/k230/ddr_2d.sh $< $@ 0x50000 0x53fff 0x54000 0x5433d  0x542bd || exit 1)
+
 
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_common
