--- a/board/canaan/k230_canmv_dongshanpi/Kconfig
+++ b/board/canaan/k230_canmv_dongshanpi/Kconfig
@@ -2,7 +2,7 @@ if TARGET_K230_CANMV_DONGSHANPI
 
 config SYS_CPU
 	default "k230"
-    
+
 config SYS_VENDOR
     default "canaan"
 
@@ -16,8 +16,14 @@ config SYS_CONFIG_NAME
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
 	select RISCV_THEAD
-    
-config CANMV_LPDDR3_2133
-	def_bool y
 
+choice
+	prompt "ddr typy freq"
+	default CANMV_DONGSHANPI_LPDDR3_1866
+
+config CANMV_LPDDR3_2133
+	bool  2133
+config CANMV_DONGSHANPI_LPDDR3_1866
+	bool 1866
+endchoice
 endif
