--- a/configs/k230_canmv_lckfb_defconfig
+++ b/configs/k230_canmv_lckfb_defconfig
@@ -1,11 +1,11 @@
 CONFIG_RISCV=y
 CONFIG_SYS_TEXT_BASE=0x8000000
 CONFIG_SYS_MALLOC_F_LEN=0x40000
-CONFIG_NR_DRAM_BANKS=3
+CONFIG_NR_DRAM_BANKS=2
 CONFIG_ENV_SIZE=0x10000
 CONFIG_ENV_OFFSET=0x1e0000
 CONFIG_SPL_DM_SPI=y
-CONFIG_DEFAULT_DEVICE_TREE="k230_canmv_dongshanpi"
+CONFIG_DEFAULT_DEVICE_TREE="k230_canmv_lckfb"
 CONFIG_SPL_TEXT_BASE=0x80300000
 CONFIG_SYS_PROMPT="K230# "
 CONFIG_SPL_MMC=y
@@ -16,7 +16,7 @@ CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI=y
 CONFIG_SYS_LOAD_ADDR=0xc000000
 CONFIG_BUILD_TARGET="u-boot.bin"
-CONFIG_TARGET_K230_CANMV_DONGSHANPI=y
+CONFIG_TARGET_K230_CANMV=y
 CONFIG_ARCH_RV64I=y
 # CONFIG_SPL_SMP is not set
 CONFIG_SHOW_REGS=y
@@ -36,6 +36,7 @@ CONFIG_SYS_STDIO_DEREGISTER=y
 CONFIG_DISPLAY_CPUINFO=y
 CONFIG_DISPLAY_BOARDINFO=y
 CONFIG_BOARD_EARLY_INIT_F=y
+CONFIG_BOARD_LATE_INIT=y
 CONFIG_SPL_MAX_SIZE=0x80000
 CONFIG_SPL_BSS_START_ADDR=0x80380000
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR=y
@@ -109,4 +110,4 @@ CONFIG_USB_ETHER_SMSC95XX=y
 CONFIG_FAT_WRITE=y
 CONFIG_SPL_GZIP=y
 # CONFIG_EFI_LOADER is not set
-CONFIG_CANMV_DONGSHANPI_LPDDR3_1866=y
+CONFIG_CANMV_V3_LPDDR4_3200=y
