--- a/common/spl/Makefile
+++ b/common/spl/Makefile
@@ -12,6 +12,7 @@ obj-$(CONFIG_$(SPL_TPL_)BOOTROM_SUPPORT) += spl_bootrom.o
 obj-$(CONFIG_$(SPL_TPL_)LOAD_FIT) += spl_fit.o
 obj-$(CONFIG_$(SPL_TPL_)LEGACY_IMAGE_FORMAT) += spl_legacy.o
 obj-$(CONFIG_$(SPL_TPL_)NOR_SUPPORT) += spl_nor.o
+obj-$(CONFIG_$(SPL_TPL_)SPI_NAND_SUPPORT) += spl_spinand.o
 obj-$(CONFIG_$(SPL_TPL_)XIP_SUPPORT) += spl_xip.o
 obj-$(CONFIG_$(SPL_TPL_)YMODEM_SUPPORT) += spl_ymodem.o
 ifndef CONFIG_SPL_UBI
@@ -26,7 +27,6 @@ obj-$(CONFIG_$(SPL_TPL_)NAND_SUPPORT) += ../../drivers/mtd/nand/spi/gigadevice.o
 obj-$(CONFIG_$(SPL_TPL_)NAND_SUPPORT) += ../../drivers/mtd/nand/spi/macronix.o
 obj-$(CONFIG_$(SPL_TPL_)NAND_SUPPORT) += ../../drivers/mtd/nand/spi/micron.o
 obj-$(CONFIG_$(SPL_TPL_)NAND_SUPPORT) += ../../drivers/mtd/nand/spi/toshiba.o
-obj-y += spl_spinand.o
 obj-$(CONFIG_$(SPL_TPL_)UBI) += spl_ubi.o
 obj-$(CONFIG_$(SPL_TPL_)NET) += spl_net.o
 obj-$(CONFIG_$(SPL_TPL_)MMC) += spl_mmc.o
